--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
             .category-img {
                 margin-right: 10px !important;
                 margin-bottom: 0 !important;
-                width: 70px !important;
-                height: 70px !important;
+                /* 기존: width: 70px; height: 70px; */
+                width: 98px !important;
+                height: 98px !important;
             }
             /* 모바일에서 텍스트 크기, 줄간격, 간격 조정 */
             .vendor-categories .category-title {
@@ -159,8 +160,9 @@
                 min-width: 64px;
             }
             .category-img {
-                width: 56px !important;
-                height: 56px !important;
+                /* 기존: width: 56px; height: 56px; */
+                width: 78.4px !important;
+                height: 78.4px !important;
             }
             .vendor-categories .category-title {
                 font-size: 13.5px !important;
