--- a/index.html
+++ b/index.html
@@ -713,11 +713,11 @@
                 }
             </style>
             <div class="application-buttons">
-                <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button general">General Vendor Application →</a>
-                <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button">Fine Art Vendor Contract →</a>
-                <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button">Commercial Vendor Contract →</a>
-                <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button">Business/Organization Vendor Contract →</a>
-                <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button">Food Vendor Contract →</a>
+               <a href="https://forms.gle/EbJMib2iW4FGVX616" class="app-button general">General Vendor Application →</a>
+                <a href="https://forms.gle/8mb1TD5MRH3kbQoq7" class="app-button">Fine Art Vendor Contract →</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfufiYerfeVoLXL0YrzKAbc9k9oSnC6BAMzoKj86hpX-PIZrA/viewform" class="app-button">Commercial Vendor Contract →</a>
+                <a href="https://forms.gle/HyXc2U9bxGBcdaS26" class="app-button">Business/Organization Vendor Contract →</a>
+                <a href="https://forms.gle/jacofNZxkrNGfajy8" class="app-button">Food Vendor Contract →</a>
             </div>
         </div>
         
